@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-14T16:27:23Z",
+  "timestamp" : "2022-07-15T01:46:30Z",
   "count_outdated" : 389,
   "uniques_outdated" : 224,
-  "count" : 421,
+  "count" : 422,
   "uniques" : 242,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
